@@ -103,7 +103,8 @@ enum CProxyType {
 	PROXY_NONE = -1,
 	PROXY_SOCKS5,
 	PROXY_SOCKS4,
-	PROXY_HTTP
+	PROXY_HTTP,
+	PROXY_SOCKS4a,
 };
 
 
